# workhours_bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  builder.Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
migrations/2020-02-23-205757_create_workday/: down.sql  up.sql
migrations/2020-02-25-201431_create_project/: down.sql  up.sql
migrations/2020-02-25-210645_add_user_id_to_project/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/queries/: project_hours.sql
