[package]
name = "workhours_bot"
version = "0.1.0"
authors = ["atte <atte.h.1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "workhours_bot"
path = "src/main.rs"

[dependencies]
teloxide = "0.1.0"
futures = "0.3.4"
log = "0.4.8"
tokio = "0.2.11"
pretty_env_logger = "0.4.0"
teloxide-macros = "=0.1.0"

